# safe-drone-guard

./: LICENSE  README.md  pyproject.toml  verify_setup.py
src/envs/: safe_aviary.py
src/safety/: cbf_shield.py
