[project]
name = "safe-drone-guard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gym-pybullet-drones",
    "gymnasium>=1.2.2",
    "numpy>=2.2.6",
    "pyyaml>=6.0.3",
    "shimmy>=2.0.0",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "wandb>=0.23.0",
]

[tool.uv.sources]
gym-pybullet-drones = { git = "https://github.com/utiasDSL/gym-pybullet-drones.git" }
